src/stylesheet.css
body {
		background-color:  #282A2C; /* whitesmoke; */
		color: whitesmoke; /*text color*/
	  font-family: Courier, Futura, Impact, Helvetica;/*ranked choice list in case browser doesn't have Futura, Impact, etc*/
	  /*font-size: 7vw;

  	/*min-width: 800px;*/
		/*width: auto;/* !important;
   	/*width: 800px;*/
}

a { /*edit link style*/
		color: aliceblue;
}
a:hover{
  	color: aliceblue;
  	text-decoration: none; /*take away underline*/
}

/*PASSCODE PAGE*/
.passcode{
	  background-color:  #282A2C;
	  color: whitesmoke; /*text color*/
	  text-align: center;
}
.passcodeBody{
	  display: flex;
	  flex-direction: column;
	  align-items: center;
}
.passcodeText{
  font-size: calc(20px + 3vw);
	margin-bottom: 2vw;
	z-index: 1;
}
.codeInput{
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: stretch;
	margin: calc(16px + 1.5vw);
	z-index: 1;
}
.codeInputBox{
	margin: calc(1px + 0.5vw);
	font-size: calc(15px + 1vw);
	text-align: center;
	border-color: whitesmoke;
}
.codeFeedback { /*not working for some reason*/
  color: firebrick;
  opacity: 0;
	font-size: calc(15px + 1vw);
	z-index: 1;
}

#passages button {
  background-color: #664180;
  border-color: #2C1D36;
	font-size: calc(15px + 1vw);
	z-index: 1;
}

.enter{
  background-color: #A5CCEC;
}

@keyframes moveDown {
	0%, 100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
	0%{
		transform: translate(0, 0);
	}
	100%{
		transform: translate(0, 20vw);
	}
}
@keyframes moveUp {
	0%, 100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
	0%{
		transform: translate(0, 0);
	}
	100%{
		transform: translate(0, -20vw);
	}
}
@keyframes moveLeft {
	0%, 100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
	0%{
		transform: translate(0, 0);
	}
	100%{
		transform: translate(20vw, 0);
	}
}
@keyframes moveRight {
	0%, 100% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
	0%{
		transform: translate(0, 0);
	}
	100%{
		transform: translate(-20vw, 0);
	}
}

/*turn off the sugarcube sidebar*/
#ui-bar{
 	display: none;
}

#story{
  	margin: 2vw 2vw !important;
}

@-webkit-keyframes flashing{
  50% {opacity: 1;}
}

.passage input[type="text"] {
  min-width: 20px;
  width: 20px;
}

/* CHAT PAGE */
.chatMessage {
	align-items: center;
	justify-content: flex-start;
  background-color: #4E4256;/*#72657B;/*#9C94A2;*/
	border: 4px solid #dedede;
  border-color: #2C1D36;/*#483D50; /*#72657B;*/
  border-radius: 3px;
	color: whitesmoke;
	display: flex;
	flex-direction: row;
  margin: 2vw 0;
	padding: 1vw;
	font-size: calc(10px + 0.5vw);
	text-align: justify;
	width:inherit;
}

.chatTextCol{
	display: flex;
	flex-direction: column;
	overflow: hidden;
	align-items: flex-start;
	justify-content: flex-start;
	align-self: flex-start;
	margin-right: 1vw;
}

.chatMessageText{ /*Not working for some reason. set in javascript*/
	margin: 0;
	line-height: calc(14px + 0.5vw);
}

.chatUsernameP{
	margin: 0;
}

.chatAvatar {
  display: block;
  float: left;
	height: calc(25px + 5vw);/*100px*/
  margin-right: 1.8vw;/*20px*/
  width: calc(25px + 5vw);/*100px*/
	flex: none;
}

.chatPage{
	font-size: calc(9px + 0.5vw);
}

.chatScroll{
  height: 85vh;
  overflow-y: auto;
  text-align: center;
}

.chatNotif{
  color: darkgrey;
	margin-left: 1vw;
	opacity: 0.8;
}

/* DISCUSSION MESSAGE PAGE */
@media screen and (min-width: 1000px) {
	.avatar {
		margin-right: 15px !important;
		height: 150px !important;/*200px*/
		width: 150px !important;/*200px*/
	}
	.darkMessage {
		padding: 15px !important;
		font-size: 18px !important;
		line-height: 25px !important;
	}
}

.darkMessage {
  background-color: #4E4256;/*#72657B;/*#9C94A2;*/
	border: 3px solid #dedede;
  border-color: #2C1D36;/*#483D50; /*#72657B;*/
	/*color: whitesmoke;*/
	border-radius: 5px;

	display: flex;
	flex-direction: row;
	padding: 1.5vw;
	font-size: calc(8px + 1vw);
	line-height: calc(12px + 1vw);
	align-items: center;
}

.textCol{
	display: flex;
	flex-direction: column;
	overflow: hidden;
	align-items: flex-start;
	justify-content: flex-start;
	align-self: flex-start;
}

.usernameP{
	margin-top: 0;
	margin-bottom: 1vw;
}

.messageText{
	margin: 0;
}

.avatar {
	flex: none;
	margin-right: 1.5vw;
	height: calc(25px + 12vw);/*200px*/
	width: calc(25px + 12vw);/*200px*/
}

.avatarImg {
	height: 100%;
	width: 100%;
}

.responses{
  display: flex;
	align-items: center;
	flex-direction: column;

  margin: 2vw;
	font-size: calc(9px + 1vw);;
}

.option {
	/*background-color: #282A2C;*/
	display: flex;
  border: 3px solid #5D8FB7;
  border-color: #664180;
	border-radius: 5px;
	align-items: center;
	justify-content: center;
	text-align: center;
	margin: 1.5vw;
	height: auto;
	width: 100%;
}
.option:hover {
  background-color: #4E4256;/*#9A71B4;*/
  border-color: #2C1D36;
}

/* HANGMAN GAME */
.hangmanBoard{
	align-items: center; /*center aligned within the column*/
  display: flex;
  flex-direction: column;
	justify-content: flex-start;/*glues it to the top of the column*/
	/*margin: auto; /*0 10vw; /*top and bottom : left and right*/

}

.hangmanWord{
	font-size: calc(13px + 2vw);/*calc(16px + 2vw); /*clamp(16px, 4vw, 60px);*/
  text-align: center;
  white-space: pre;
	margin: calc(10px + 3vw);
}

.hangmanFeedback{
	font-size: calc(20px + 2vw);
  text-align: center;
  white-space: pre;
	margin: 2vw;
}

.alphabet{ /*full hangman alphabet board*/
  display: flex;
  flex-direction: column;
	font-size: calc(20px + 2vw);
}

.alphaLine{ /*just one line of the hangman alphabet*/
  display: flex;
  flex-direction: row;
  justify-content: center;

}


button:disabled,
button[disabled]{
  opacity: 0;
}

@media screen and (max-width: 450px) {
  /* .helper {
		width: 95vw !important;
  } */
}

/* The helper message box */
.helper {
	display: flex;
  flex-direction: row;
  font-size: calc(10px + 0.7vw);
	left: 50%; /* centers on x axis */
	padding: 1vw;
	position: fixed;
  text-align: left;
	transform: translateX(-50%);
  width: calc(300px + ((100vw - 300px) * 0.5));
	margin: 1vw;
	z-index: 2;
}

.helperText{
	margin: 0;
}
.allHelperText{
  flex-grow: 3;
}
.helperAvatarImg {
	align-self: center;
  border-radius: 50%;
  height: auto;
	width: calc(10px + 5vw);
	margin-right: 2vw;
}
/* The close button */
.closebtn {
  color: white;
	cursor: pointer;
	float: right;
  font-size: calc(15px + 1vw);;
	font-weight: bold;
  line-height: calc(8px + 0.5vw);
  position: relative;
	align-items: flex-start;
	opacity: 0.5;
	padding: 1vw;
}
/* When moving the mouse over the close button */
.closebtn:hover {
  color: black;
}

/*MANIFESTO PAGE*/
@media screen and (min-width: 800px) {
  .manifesto {
		font-size: 20px !important;
  }
}

.manifestoText{
	font-size: calc(10px + 1.3vw);
	height: 80vh;
  overflow-y: auto;
}

.fullManifestoPage{
	color: darkgrey;
	display: flex;
	flex-direction: column;
}

